# papa-toolkit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  image_syncer.py  requirements.txt  run.bat  run_year_organizer.bat  test_image_syncer.py  year_organizer.py
image-syncer/: main.py  pyproject.toml  setup.py
image-syncer/src/: image_syncer.py
mediakit/: setup.py
papakit/: setup.py
papakit/scripts/: run.bat
scripts/: borraduplicados.py  delemptyfolders.py  installation.md
